docs/api/qiskit/0.33/qiskit.transpiler.passes.Decompose.md
---
title: Decompose
description: API reference for qiskit.transpiler.passes.Decompose
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Decompose
---

# Decompose

<span id="qiskit.transpiler.passes.Decompose" />

`Decompose(gate=None, gates_to_decompose=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/basis/decompose.py "view source code")

Bases: `qiskit.transpiler.basepasses.TransformationPass`

Expand a gate in a circuit using its decomposition rules.

Decompose initializer.

**Parameters**

*   **gate** (`Optional`\[`Type`\[`Gate`]]) – DEPRECATED gate to decompose.
*   **gates\_to\_decompose** (`Union`\[`Type`\[`Gate`], `List`\[`Type`\[`Gate`]], `List`\[`str`], `str`, `None`]) – optional subset of gates to be decomposed, identified by gate label, name or type. Defaults to all gates.

## Methods

### name

<span id="qiskit.transpiler.passes.Decompose.name" />

`Decompose.name()`

Return the name of the pass.

### run

<span id="qiskit.transpiler.passes.Decompose.run" />

`Decompose.run(dag)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/basis/decompose.py "view source code")

Run the Decompose pass on dag.

**Parameters**

**dag** (`DAGCircuit`) – input dag.

**Return type**

`DAGCircuit`

**Returns**

output dag where `gate` was expanded.

## Attributes

<span id="qiskit.transpiler.passes.Decompose.gate" />

### gate

Returns the gate

**Return type**

`Gate`

<span id="qiskit.transpiler.passes.Decompose.is_analysis_pass" />

### is\_analysis\_pass

Check if the pass is an analysis pass.

If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.

<span id="qiskit.transpiler.passes.Decompose.is_transformation_pass" />

### is\_transformation\_pass

Check if the pass is a transformation pass.

If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).

